forgot I was working in main. rip

--- a/index.html
+++ b/index.html
@@ -9,8 +9,21 @@
         <title>Avvi's Morse Code Translator</title>
     </head>
     <body>
-        <main>
+        <header>
             <h1>Avvi's Morse Code Translator</h1>
+            <h3>Translate English text to Morse Code and vice versa</h3>
+        </header>
+        <main>
+            <div class="main-container">
+                <div class="english-container">
+                    <h3>English</h3>
+                    <textarea></textarea>
+                </div>
+                <div class="morse-container">
+                    <h3>Morse</h3>
+                    <textarea></textarea>
+                </div>
+            </div>
         </main>
     </body>
 </html>
