Html pretty much done and eventListeners added to boxes and they're both working

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
             <div class="main-container">
                 <div class="english-container">
                     <h3>English</h3>
-                    <textarea></textarea>
+                    <textarea cols="55" rows="17" id="english-text"></textarea>
                 </div>
                 <div class="morse-container">
                     <h3>Morse</h3>
-                    <textarea></textarea>
+                    <textarea cols="55" rows="17" id="morse-text"></textarea>
                 </div>
             </div>
         </main>
