--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
         <title>Avvi's Morse Code Translator</title>
     </head>
     <body>
-        <header>
-            <h1>Avvi's Morse Code Translator</h1>
-            <h3>Translate English text to Morse Code and vice versa</h3>
+        <header class="heading-container">
+            <h1 class="heading-h1">Avvi's Morse Code Translator</h1>
+            <h3 class="heading-h3">
+                Translate English text to Morse Code and vice versa
+            </h3>
         </header>
         <main>
             <div class="main-container">
