Main layout flexed

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         </header>
         <main>
             <div class="main-container">
-                <div class="english-container">
+                <div class="main-english-container">
                     <h3>English</h3>
                     <textarea cols="55" rows="17" id="english-text"></textarea>
                 </div>
-                <div class="morse-container">
+                <div class="main-morse-container">
                     <h3>Morse</h3>
                     <textarea cols="55" rows="17" id="morse-text"></textarea>
                 </div>
