textarea border modified

--- a/index.html
+++ b/index.html
@@ -24,12 +24,23 @@
         <main>
             <div class="main-container">
                 <div class="main-english-container">
-                    <h3>English</h3>
-                    <textarea cols="55" rows="17" id="english-text"></textarea>
+                    <h3 class="main-english-container-heading">English</h3>
+                    <textarea
+                        cols="55"
+                        rows="17"
+                        id="english-text"
+                        class="main-english-container-textarea"
+                    ></textarea>
                 </div>
+
                 <div class="main-morse-container">
-                    <h3>Morse</h3>
-                    <textarea cols="55" rows="17" id="morse-text"></textarea>
+                    <h3 class="main-morse-container-heading">Morse</h3>
+                    <textarea
+                        cols="55"
+                        rows="17"
+                        id="morse-text"
+                        class="main-morse-container-textarea"
+                    ></textarea>
                 </div>
             </div>
         </main>
